--- a/pom.xml
+++ b/pom.xml
@@ -121,11 +121,11 @@
         <graalvm.version>22.3.0</graalvm.version>
         <gson.version>2.9.0</gson.version>
         <guice.version>4.0</guice.version>
-        <hadoop.version>3.3.0</hadoop.version>
+        <hadoop.version>3.2.1</hadoop.version>
         <ozone.version>1.0.0</ozone.version>
         <hamcrest.version>2.2</hamcrest.version>
         <hbase.version>2.4.6</hbase.version>
-        <hive.version>3.1.2</hive.version>
+        <hive.version>2.3.9</hive.version>
         <hive.storage-api.version>2.7.2</hive.storage-api.version>
         <orc.version>1.5.8</orc.version>
         <hbase-shaded-protobuf>3.5.1</hbase-shaded-protobuf>
@@ -846,33 +846,38 @@
     </distributionManagement>
     <repositories>
         <repository>
-            <id>apache.snapshots.https</id>
-            <name>Apache Development Snapshot Repository</name>
-            <url>https://repository.apache.org/content/repositories/snapshots</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>apache.public.https</id>
-            <name>Apache Development Snapshot Repository</name>
-            <url>https://repository.apache.org/content/repositories/public</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
+            <id>cloudera.repo</id>
+            <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
         </repository>
         <!--
-    <repository>
-      <id>repo</id>
-      <url>file://${basedir}/local-repo</url>
-      <snapshots>
-         <enabled>true</enabled>
-      </snapshots>
-  </repository>
-  -->
+       <repository>
+           <id>apache.snapshots.https</id>
+           <name>Apache Development Snapshot Repository</name>
+           <url>https://repository.apache.org/content/repositories/snapshots</url>
+           <snapshots>
+               <enabled>true</enabled>
+           </snapshots>
+       </repository>
+       <repository>
+           <id>apache.public.https</id>
+           <name>Apache Development Snapshot Repository</name>
+           <url>https://repository.apache.org/content/repositories/public</url>
+           <releases>
+               <enabled>true</enabled>
+           </releases>
+           <snapshots>
+               <enabled>false</enabled>
+           </snapshots>
+       </repository>
+
+   <repository>
+     <id>repo</id>
+     <url>file://${basedir}/local-repo</url>
+     <snapshots>
+        <enabled>true</enabled>
+     </snapshots>
+ </repository>
+ -->
     </repositories>
     <dependencyManagement>
         <dependencies>
