copy HiveResourceACLs from hive 3.1.2

--- a/hive-agent/pom.xml
+++ b/hive-agent/pom.xml
@@ -182,6 +182,11 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.1.0.Final</version>
+        </dependency>
     </dependencies>
     <build>
         <testResources>
